minor updates to fixed a bug wit margin showing large white space below navbar

--- a/static/css/gamershub.css
+++ b/static/css/gamershub.css
@@ -10,7 +10,6 @@ html {
 }
 
 body {
-	position: relative;
 	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 	padding-top: 60px;
 	padding-bottom: 60px;
@@ -20,8 +19,8 @@ body {
 /********** Nav Bar Style **********/
 
 .navbar {
+	position: fixed;
 	height: 60px;
-	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 	border-bottom: solid;
 	border-width: thin;
 	border-color: #ff8400;
@@ -41,7 +40,6 @@ body {
 }
 
 .navbar-brand img {
-	float: left;
 	vertical-align: middle;
 }
 
@@ -65,10 +63,11 @@ footer {
 /********** Paragraph Style **********/
 
 p {
-	font-family: "Franklin Gothic", "Arial Narrow", Arial, "sans-serif";
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+	font-style: normal;
 }
 
-.date {
+p .date {
 	color: #ccc;
 	font-size: 12px;
 }
@@ -80,7 +79,7 @@ p {
 }
 
 .borderlands-img {
-	position: static;
+	position: fixed;
 	background: url("/static/img/login-page/borderlands-two.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -95,13 +94,13 @@ p {
 /********** Forms Style **********/
 
 .custom-form {
+	max-width: 60%;
+	height: auto;
 	text-align: center;
 	background-color: rgba(201, 201, 200, 0.65);
 	color: rgb(46, 83, 132);
 	border-radius: 10px;
-	max-width: 60%;
-	margin: auto;
-	margin-top: 200px;
+	margin: 100px auto;
 	padding: 10px;
 }
 
@@ -205,15 +204,15 @@ ul.messages li.error,
 #homepage-h1 {
 	position: absolute;
 	width: 100%;
-	left: 13.5px;
-	top: 20%;
+	left: 12.5px;
+	top: 25%;
 }
 
 #homepage-h1 span {
 	background: reg(0, 0, 0); /*fallback color */
 	background: rgba(0, 0, 0, 0.7);
 	color: white;
-	font: bold 24px/45px "Franklin Gothic Medium", "Helvetica", "Sans-Serif";
+	font-size: 30px;
 	letter-spacing: -1px;
 	padding: 12px;
 }
